# PhantomLogos

./: .cursorrules  .gitignore  .mcp.json  .mcp.template.json  .opencodeignore  .pre-commit-config.yaml  .semgrepignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  DEEPSEEK_CMD.md  GEMINI.md  INSTALL.md  INSTALLATION.md  LICENSE  LOCAL_HYBRID_GUIDE.md  NOTICE.md  README.md  SECURITY.md  __init__.py  alembic.ini  clean_workspace.bat  conftest.py  mcp_config.json  mcp_config.template.json  opencode.json  opencode.template.json  package-lock.json  pyproject.toml  pyrefly.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  run_morpheus.bat  run_morpheus.sh  run_watchdog_daemon.bat  run_watchdog_daemon.sh  scratch_book.md  (+2 more)
.antigravity/: CONSTITUTION.md  CONTRIBUTING.md  IDENTITY.md  README.md  ROADMAP_STATUS_Q2_2026.md  SECURITY.md  SYSTEM_REPORT.md  restoration.md  rules.json  schema.sql  test_write_simple.md  tools.md  tools_new.md  topography.md  topography_standards.md
.antigravity/audit/: audit_report_035.md  failure_audit_11.18.3.md  phase_11_10.md  session_transparency.md
.antigravity/dev/: INSTALL.md  ROADMAP.md  TASKS.md  planning.md
.antigravity/walkthroughs/: conversation_20260509_1730.md  k04_research.md  main_walkthrough.md  system_infrastructure_hardening.md  vision_benchmark_report.md
.claude/: settings.json  settings.template.json
.claude/commands/: audit.md  browse.md  careful.md  freeze.md  github.md  guard.md  investigate.md  kg-mem.md  playwright.md  recall.md  recover.md  remember.md  ruflow.md  security.md  socratic.md  sprint.md  think.md  topography.md  unfreeze.md
.claude/hooks/: check-careful.ps1  check-freeze.ps1  chrome-cdp.ps1
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.opencode/plugins/: websearch.js
agent/: a2a_registry.json  atropos.yaml  claude-code.yaml  clotho.yaml  hermes.yaml  lachesis.yaml  morpheus.yaml  sophia.yaml  test_shield.txt
agent/skills/: README.md
alembic/: README  env.py
cognition/: __init__.py
cognition/mnemosyne/: __init__.py  base.py  episodic_store.py  file_changelog.py  goal_store.py  hypergraph_feeder.py  hypergraph_models.py  hypergraph_store.py  memory_arbitrator.py  meta_cognition.py  models.py  operational_store.py  procedural_store.py  rational_store.py  reflection_store.py  semantic_store.py  session_log.py  spatial_store.py  temporal_store.py  tone_store.py  trajectory_store.py  visual_store.py
cognition/morpheus/: __init__.py  loader.py  monitor.py  registry.py  scheduler.py  sweeper.py  vram_config.py
cognition/sophia/: __init__.py  eidos.py  hephaestus.py  router.py  sophia.py  sprint_contract.py  state_bus.py  temperature_control.py  tool_validator.py
dashboard/: app.js  index.html  style.css
docs/: DASHBOARD.md  PERFORMANCE_v1.2.1.md  README.md  future.md  token_counting_standards.md  topography_bck.md  unused_modules.md
docs/audit/: audit_report.md
docs/testing/: VRAM_stability.md  cross_platform.md  path_sanitization.md  zero_vector_fallback.md
logs/: modules_full_list.txt  ollama_full_list.txt
logs/post_mortem/: Phase_11_20_Post_Mortem.md  behavioral_analysis.md  context_illusion_analysis.md  external_memory_doctrine.md  flash_pathology_analysis.md  post_mortem_report.md  retrospective_audit.md
logs/system/: phase_11_18_4_scratchbook.md  phase_11_21_remediation.md
mcp-servers/kg-mem/: memory.json
rapport/: db_concurrency_hardening_plan.md  gemini_35_flash_entegrasyon_raporu.md  google_incident_report.md  google_quota_disaster_report.md  python_deadlock_analysis.md  sistem_stability_report.md  stabilite_raporu_faz8.md  tarama_ve_aksiyon_raporu.md  windows_ide_diagnostic.md
scripts/: audit_capabilities.py  audit_gap_2.py  backup_critical_configs.py  baseline_benchmark.py  benchmark_qwen0.5b.py  bootstrap.py  browse_mcp_server.py  check_experience.py  check_reliability.py  check_reliability_temp.py  check_reliability_v3.py  check_schema_integrity.py  check_tables.py  check_thinking.py  clean_workspace.ps1  cleanup_episodes.py  cleanup_facts.py  cleanup_goals.py  codebase_scanner.py  compare_baselines.py  configure_slm.py  create_experience_table.py  create_l0_token.py  cross_check.py  dashboard.py  db_diag.py  discover_id.py  emergency_reset.py  expert_audit.py  genai_manager.py  health_check.py  health_check_14_axes.py  hermes_cli.py  hide_morpheus.vbs  hide_watchdog.vbs  k03_verification.py  list_models.py  migrate_goals_v2.py  migrate_keys.py  migrate_meta_schema.py  (+54 more)
src/: __init__.py  test_kacak.py
src/ankyra/: __init__.py  anchor_generator.py
src/architrave/: __init__.py  ariadne.py  base_models.py  context_cache.py  entity_extractor.py  gateway_client.py  kratos.py  model_registry.py  nomos.py  opencode_store.py  otl_engine.py  sovereign_middleware.py
src/atropos/: __init__.py  context_cache_middleware.py  context_pruner.py  matryoshka_service.py  observability.py  test_write.py  token_budget.py  token_budget_middleware.py
tests/: IGNORED_TESTS.md  __init__.py  conftest.py  diagnose_hang.py  stability_check_phase_11_18_1.py  test_a2a_federation.py  test_agnostic_gateway.py  test_ankyra_v2.py  test_atropos_logic.py  test_axis11_logic.py  test_axis_12_integration.py  test_axis_labeling.py  test_axis_stability.py  test_bootstrap_shutdown.py  test_citation_guard.py  test_context_cache_sweep.py  test_context_hardening.py  test_dashboard_api.py  test_deigma_constraint.py  test_ebbinghaus.py  test_entity_extractor_unit.py  test_entity_pipeline.py  test_evaluator_grading.py  test_event_log_recovery.py  test_failure_memory_integration.py  test_failure_memory_unit.py  test_failure_pruning.py  test_full_pipeline.py  test_gateway_circuit_breaker.py  test_gateway_distillation.py  test_gateway_secondary.py  test_gemini_context_cache.py  test_genai_manager.py  test_gliner2_pipeline.py  test_gnosis.py  test_gpu_monitor_cooldown.py  test_graph_verifier.py  test_guarded_client.py  test_hermes_bridge.py  test_hybrid_search_rrf.py  (+49 more)
(+169 files in other folders)
