[project]
name = "phantom-logos"
version = "0.1.0"
description = "Phantom Logos Sovereign OS - Modular Refactoring (Phase 11.19.5)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "google-genai>=0.3.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "lancedb>=0.6.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "z3-solver>=4.13.0",
    "sympy>=1.12",
    "qwed-sdk>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
