[project]
name = "phantom-logos"
version = "0.1.0"
description = "Phantom Logos Sovereign OS"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Phantom Logos Project Owners", email = "admin@siliconstencil.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "langgraph>=0.2.0",
    "google-genai>=1.74.0,<3.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "lancedb>=0.6.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "z3-solver>=4.13.0",
    "sympy>=1.12",
    "qwed>=5.0.0",
    "gliner2>=1.3.1",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.15.0",
    "mypy>=1.11.0",
    "pre-commit>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/siliconstencil/phantom-logos"
Repository = "https://github.com/siliconstencil/phantom-logos.git"
Changelog = "https://github.com/siliconstencil/phantom-logos/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "B", "SIM", "ARG", "ASYNC", "S", "ANN", "N", "I", "PERF", "RUF"]
ignore = ["E501", "ANN101", "ANN102"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pyright]
include = ["."]
extraPaths = ["."]
venvPath = "."
venv = ".venv"
autoSearchPaths = false
typeCheckingMode = "basic"
