[project]
name = "phantom-logos"
version = "1.1.0"
description = "Phantom Logos Sovereign OS"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Phantom Logos Project Owners", email = "admin@siliconstencil.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "langgraph>=0.2.0",
    "google-genai>=1.74.0,<3.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "lancedb>=0.6.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "z3-solver>=4.13.0",
    "sympy>=1.12",
    "qwed>=5.0.0",
    "gliner2>=1.3.1",
    "pydantic-settings>=2.0.0",
    "alembic>=1.18.0",
    "mcp>=1.27.1",
    "pydantic-ai>=1.0.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "ollama>=0.4.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.0",
    "mypy>=1.11.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/siliconstencil/PhantomLogos"
Repository = "https://github.com/siliconstencil/PhantomLogos.git"
Changelog = "https://github.com/siliconstencil/PhantomLogos/blob/master/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "smoke: Smoke tests for verifying basic build status",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "B", "SIM", "ARG", "ASYNC", "S", "ANN", "N", "I", "PERF", "RUF"]
ignore = ["E501", "ANN401", "N999"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S108", "ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ARG001", "ARG002", "ARG005", "ASYNC251", "ASYNC240", "ASYNC230", "F841", "N806", "S110", "S603", "S605", "S607", "RUF012", "RUF013", "SIM117"]
"projects/**" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ARG001", "ARG002", "B007", "N806", "N803", "N812", "S101", "S105", "S110", "S603", "S605", "S607", "F841", "RUF013", "E402", "I001", "PERF401"]
"alembic/**" = ["ANN201", "ANN001", "F401", "E402"]
"cognition/**" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ARG001", "ARG002", "ARG004", "ASYNC221", "ASYNC230", "ASYNC240", "B904", "F401", "F822", "N806", "PERF401", "RUF003", "RUF006", "RUF012", "RUF013", "S110", "S310", "S603", "S607", "S608", "E402"]
"scripts/**" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ARG001", "ARG002", "ASYNC221", "ASYNC230", "ASYNC240", "B007", "N806", "PERF401", "S101", "S105", "S110", "S603", "S605", "S607", "E402", "T201", "T203"]
"src/**" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "ANN205", "ANN206", "ARG001", "ARG002", "E402", "S104", "RUF100"]
"src/architrave/mcp/mcp_tool_bridge.py" = ["RUF002"]
"src/architrave/mcp/slm_client.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true

[tool.pyright]
include = ["."]
exclude = [".venv", ".antigravity", "data", "projects", "scratch"]
ignore = ["cognition", "scripts", "src", ".antigravity", ".venv", "slm_custom", "data", "projects", "scratch", "tests"]
extraPaths = ["."]
venvPath = "."
venv = ".venv"
autoSearchPaths = false
typeCheckingMode = "basic"
